# blc-social-audit

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Caddyfile  DEPLOYMENT.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  pre-commit.yml  protect-main.yml
apps/: __init__.py
apps/api/: Dockerfile  auth.py  deps.py  main.py
apps/frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json
apps/shared/: __init__.py  audit_states.py  config.py  database.py  metrics.py  models.py  observability.py  retention.py
apps/worker/: Dockerfile  celery_app.py  tasks.py
brand/: blc.yaml
deploy/: deploy.sh
docs/: 01_REQUIREMENTS.md  02_IMPLEMENTATION.md  02_SETUP_GUIDE.md  03_ARCHITECTURE.md  03_PHASE1_JIRA_PLAN.md  04_PHASE1_CONFLUENCE_HANDOFF.md  04_RUBRIC_GUIDE.md  05_CODE_WALKTHROUGH.md  05_OPERATOR_GUIDE.md  06_CURRENT_ARCHITECTURE.mmd  06_KNOWN_LIMITATIONS.md  07_DEPLOYMENT_GUIDE.md  07_SETUP_GUIDE.md  08_ARCHITECTURE_OVERVIEW.md  08_PHASE2_PLAN.md  09_PHASE2_JIRA_PLAN.md  09_RUBRIC_GUIDE.md  10_OPERATOR_GUIDE.md  10_PHASE2_IMPLEMENTATION.md  11_COMMENTARY_CONSISTENCY_PLAN.md  11_KNOWN_LIMITATIONS.md  12_QA_REPORT.md  13_AI_INSIGHTS_INTEGRATION_PLAN.md  13_INTERNAL_DEPLOYMENT_GUIDE.md  14_AI_VISIBILITY_VENDOR_SELECTION.md  14_PHASE2_PLAN.md  15_FUTURE_ARCHITECTURE_OPTIONS.md  15_PHASE2_JIRA_PLAN.md  16_PHASE2_IMPLEMENTATION.md  16_PRODUCTION_RUNBOOK.md  17_REPORT_QUALITY_PLAN.md  18_REPORT_QUALITY_JIRA_PLAN.md  19_SOCIAL_AUDIT_ENHANCEMENT_JIRA_PLAN.md  20_SEMRUSH_AI_VISIBILITY_INTEGRATION_PLAN.md
migrations/: env.py
migrations/versions/: 20260528_0001_create_audit_tables.py  20260611_0002_add_external_seo_google_connections.py  20260623_0003_add_share_links_and_brand_overrides.py  20260623_0004_add_social_audit_type.py  20260625_0005_add_accessibility_facts.py
prompts/: commentary_social_system.md  commentary_social_user.md  commentary_system.md  commentary_user.md
rubrics/: composite.yaml  overall.yaml  seo.yaml  social.yaml  uxui.yaml
scripts/: backup_db.py  check_apify_social.py  check_live_psi.py  check_semrush_ai_visibility.py  cleanup_storage.py  health_alert.py  qa_common.py  qa_e2e.py  qa_reproducibility.py  run_social_audit.py  semrush_connect_server.sh
templates/: report.css  report.html  social_report.html
templates/partials/: rule_table.html
tests/fixtures/: google_places_details.json  malformed_site.html  malformed_site_expected.json  social_facebook_strong.json  social_instagram_strong.json  strong_site.html  (+7 more)
(+103 files in other folders)
