[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blc-website-audit"
version = "0.1.0"
description = "Local-first BLC website audit automation MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "beautifulsoup4>=4.12.3",
    "celery[redis]>=5.4.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "playwright>=1.48.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "ruff>=0.5.0",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "apps" }]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1"
pytest = ">=8.2.2"
ruff = ">=0.5.0"

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
